--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1 id="heading">Find Factorial !!!</h1>
     <br>
     <br>
-    <h4 id="def">Basic Definition:-</h4>
+    <h4 id="def">What is Factorial?</h4>
     <p id="factdef">Factorial is a mathematical operation that involves multiplying a number by all the positive integers less than or equal to itself. It is denoted by an exclamation mark(!) after the number.</p>
     <hr id="line1">
     <br>
